--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,10 +1,10 @@
 @import '_colors.scss';
 
 html, body,.App, #root{
-  width: 102%;
+  width: 100%;
   height: 100%;
   margin: 0px;
   padding: 0px;
-  overflow: hidden;
+  overflow: visible;
   background: $navy;
 }
