--- a/src/styles/NewUser.scss
+++ b/src/styles/NewUser.scss
@@ -44,6 +44,40 @@
   background-color: transparent;
 }
 
+.form-c{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-tc{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display:flex;
+  flex-wrap: wrap;
+}
+
+.form-text{
+  position: absolute;
+  width: 100%;
+  top:0px;
+  left: 0px;
+  text-align: center;
+  color:white;
+  width: 100%;
+  height: 100%;
+  display:flex;
+  flex-wrap: wrap;
+}
+
+.su-text{
+  width:100%;
+}
+
 .info{
   width: 33.333%;
   background-color: $primary;
