--- a/src/styles/NewUser.scss
+++ b/src/styles/NewUser.scss
@@ -61,21 +61,56 @@
   flex-wrap: wrap;
 }
 
+.l-form{
+  width:100%;
+  overflow: visible;
+}
+
 .form-text{
-  position: absolute;
-  width: 100%;
-  top:0px;
-  left: 0px;
-  text-align: center;
   color:white;
   width: 100%;
   height: 100%;
-  display:flex;
+}
+
+@-webkit-keyframes zoomin {
+  0%   { transform: scale(0); }
+  100% { transform: scale(1); }
+}
+@keyframes zoomin {
+  0%   { transform: scale(0); }
+  100% { transform: scale(1); }
+}
+.zoomIn {
+  -webkit-animation: zoomin 5s forwards; /* Safari 4+ */
+  animation:         zoomin 5s forwards; /* IE 10+, Fx 29+ */
+}
+
+.zoomOut{
+
+}
+
+@keyframes{
+
+}
+
+.d-flex{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
 }
 
 .su-text{
   width:100%;
+}
+
+.f-input{
+  width: 100%;
+  height: 50px;
+  padding: 20px;
+  margin: 20px;
 }
 
 .info{
